modified:   css/apple.css 	modified:   css/banner.css 	modified:   css/base.css 	modified:   css/footer.css 	modified:   css/header.css 	modified:   css/hot-prod.css 	modified:   css/mobile.css 	modified:   index.html 	modified:   mobile.html 	modified:   mobile/apple.html 	modified:   orderInfo.html

--- a/mobile.html
+++ b/mobile.html
@@ -9,84 +9,84 @@
     <link rel="stylesheet" href="/css/mobile.css">
 </head>
 
-<body>  
-    <div class="mobile-container">
-        <ul class="nav-list">
-            <li><a href="/index.html"><i class="fa-solid fa-house" style="color: red;"></i>Trang chủ</a></li>
-            <li><a href=""><i class="fa-solid fa-greater-than" style="font-size: 12px;"></i>Điện
-                    thoại</a>
-            </li>
-        </ul>
-    </div>
-    <div class="clear"></div>
+<body>
 
-    <div class="list-brand">
-        <nav>
-            <a href="#" class="list-brand_item"><span><i class="fa-brands fa-apple"
-                        style="margin-right: 5px; font-size: 18px;"></i>Apple</span> </a>
-            <a href="#" class="list-brand_item"><span style="color: blue;">Samsung</span> </a>
-            <a href="#" class="list-brand_item"><span style="color:green;">Oppo</span> </a>
-            <a href="#" class="list-brand_item"><span style="color: gray;">xiaomi</span> </a>
-            <a href="#" class="list-brand_item"><span style="color: rgb(35, 118, 226);">vivo</span> </a>
-            <a href="#" class="list-brand_item"><span style="color: rgb(28, 118, 202);">nokia</span> </a>
-            <a href="#" class="list-brand_item"><span>sony</span> </a>
-        </nav>
-    </div>
+        <div class="mobile-container">
+            <ul class="nav-list">
+                <li><a href="home.html"><i class="fa-solid fa-house" style="color: red;"></i>Trang chủ</a></li>
+                <li><a href=""><i class="fa-solid fa-greater-than" style="font-size: 12px;"></i>Điện
+                        thoại</a>
+                </li>
+            </ul>
+            <div class="list-brand">
+                <nav>
+                    <a href="mobile/apple.html" target="page" class="list-brand_item"><span><i class="fa-brands fa-apple"
+                                style="margin-right: 5px; font-size: 18px;"></i>Apple</span> </a>
+                    <a href="#" class="list-brand_item"><span style="color: blue;">Samsung</span> </a>
+                    <a href="#" class="list-brand_item"><span style="color:green;">Oppo</span> </a>
+                    <a href="#" class="list-brand_item"><span style="color: gray;">xiaomi</span> </a>
+                    <a href="#" class="list-brand_item"><span style="color: rgb(35, 118, 226);">vivo</span> </a>
+                    <a href="#" class="list-brand_item"><span style="color: rgb(28, 118, 202);">nokia</span> </a>
+                    <a href="#" class="list-brand_item"><span>sony</span> </a>
+                </nav>
+            </div>
+            <div class="condition">
+                <div class="filter-sort_title">
+                    Chọn tiêu chí
+                </div>
+                <div class="filter-sort_list-filter">
+                    <div class="filter-wrapper">
+                        <button class="btn-filter">
+                            <i class="fa-solid fa-filter" style="margin-right: 5px;"></i>
+                            Bộ lọc
+                        </button>
+                    </div>
 
-    <div class="condition">
-        <div class="filter-sort_title">
-            Chọn tiêu chí
+                    <div class="filter-price">
+                        <button class="btn-filter">
+                            Giá
+                            <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                        </button>
+                    </div>
+
+                    <div class="filter-memory">
+                        <button class="btn-filter">
+                            Bộ nhớ trong
+                            <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                        </button>
+                    </div>
+
+                    <div class="filter-capacityRam">
+                        <button class="btn-filter">
+                            Dung lượng RAM
+                            <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="filter-sort_title">
+                    Sắp xếp theo
+                </div>
+                <div class="filter-sort_list-filter">
+                    <div class="filter-price_than">
+                        <button class="btn-filter">
+                            <i class="fa-solid fa-arrow-down-wide-short" style="margin-right: 5px;"></i>
+                            Giá Cao - Thấp
+                        </button>
+                    </div>
+
+                    <div class="filter-price_than">
+                        <button class="btn-filter">
+                            <i class="fa-solid fa-arrow-up-wide-short" style="margin-right: 5px;"></i>
+                            Giá Thấp - Cao
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="clear"></div>
         </div>
-        <div class="filter-sort_list-filter">
-            <div class="filter-wrapper">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-filter" style="margin-right: 5px;"></i>
-                    Bộ lọc
-                </button>
-            </div>
 
-            <div class="filter-price">
-                <button class="btn-filter">
-                    Giá
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
 
-            <div class="filter-memory">
-                <button class="btn-filter">
-                    Bộ nhớ trong
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
 
-            <div class="filter-capacityRam">
-                <button class="btn-filter">
-                    Dung lượng RAM
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
-        </div>
-        <div class="filter-sort_title">
-            Sắp xếp theo
-        </div>
-        <div class="filter-sort_list-filter">
-            <div class="filter-price_than">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-arrow-down-wide-short" style="margin-right: 5px;"></i>
-                    Giá Cao - Thấp
-                </button>
-            </div>
-
-            <div class="filter-price_than">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-arrow-up-wide-short" style="margin-right: 5px;"></i>
-                    Giá Thấp - Cao
-                </button>
-            </div>
-        </div>
-    </div>
-
-    
 </body>
 
 </html>
