--- a/orderInfo.html
+++ b/orderInfo.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    <link rel="stylesheet" href="css/orderInfo.css">
 </head>
+
 <body>
-    
-    hihihi
+    <div class="cart-layout">
+        <div class="cart-info">
+
+            ihihihiih
+        </div>
+        <div class="cart-form">
+            <h3>THÔNG TIN ĐẶT HÀNG</h3>
+            <p><em>Bạn cần nhập đầy đủ các trường thông tin có dấu *</em></p>
+            <form>
+                <input type="text" placeholder="Họ và tên *" required>
+                <input type="tel" placeholder="Số điện thoại *" required>
+                <input type="email" placeholder="Email">
+
+
+
+
+                <textarea placeholder="Ghi chú" rows="4"></textarea>
+
+                <button type="submit">XÁC NHẬN VÀ ĐẶT HÀNG</button>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
