--- a/mobile/apple.html
+++ b/mobile/apple.html
@@ -13,77 +13,78 @@
 <body>
     <div class="cps-container">
         <ul class="nav-list">
-            <li><a href="/index.html"><i class="fa-solid fa-house" style="color: red;"></i>Trang chủ</a></li>
+            <li><a href="/home.html"><i class="fa-solid fa-house" style="color: red;"></i>Trang chủ</a></li>
             <li><a href=""><i class="fa-solid fa-greater-than" style="font-size: 12px;"></i>Điện
                     thoại</a>
             </li>
             <li><a href=""><i class="fa-solid fa-greater-than" style="font-size: 12px;"></i>Apple</a></li>
         </ul>
+        <div class="clear"></div>
+
+        <div class="list-brand">
+            <nav>
+                <a href="#" class="list-brand_item"><span>IPHONE 15 SERIES</span> </a>
+                <a href="#" class="list-brand_item"><span>IPHONE 14 SERIES</span> </a>
+                <a href="#" class="list-brand_item"><span>IPHONE 13 SERIES</span> </a>
+                <a href="#" class="list-brand_item"><span>IPHONE 12 SERIES</span> </a>
+                <a href="#" class="list-brand_item"><span>IPHONE 11 SERIES</span> </a>
+            </nav>
+        </div>
+
+        <div class="condition">
+            <div class="filter-sort_title">
+                Chọn tiêu chí
+            </div>
+            <div class="filter-sort_list-filter">
+                <div class="filter-wrapper">
+                    <button class="btn-filter">
+                        <i class="fa-solid fa-filter" style="margin-right: 5px;"></i>
+                        Bộ lọc
+                    </button>
+                </div>
+
+                <div class="filter-price">
+                    <button class="btn-filter">
+                        Giá
+                        <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                    </button>
+                </div>
+
+                <div class="filter-memory">
+                    <button class="btn-filter">
+                        Bộ nhớ trong
+                        <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                    </button>
+                </div>
+
+                <div class="filter-capacityRam">
+                    <button class="btn-filter">
+                        Dung lượng RAM
+                        <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="filter-sort_title">
+                Sắp xếp theo
+            </div>
+            <div class="filter-sort_list-filter">
+                <div class="filter-price_than">
+                    <button class="btn-filter">
+                        <i class="fa-solid fa-arrow-down-wide-short" style="margin-right: 5px;"></i>
+                        Giá Cao - Thấp
+                    </button>
+                </div>
+
+                <div class="filter-price_than">
+                    <button class="btn-filter">
+                        <i class="fa-solid fa-arrow-up-wide-short" style="margin-right: 5px;"></i>
+                        Giá Thấp - Cao
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="clear"></div>
 
-    <div class="list-brand">
-        <nav>
-            <a href="#" class="list-brand_item"><span>IPHONE 15 SERIES</span> </a>
-            <a href="#" class="list-brand_item"><span>IPHONE 14 SERIES</span> </a>
-            <a href="#" class="list-brand_item"><span>IPHONE 13 SERIES</span> </a>
-            <a href="#" class="list-brand_item"><span>IPHONE 12 SERIES</span> </a>
-            <a href="#" class="list-brand_item"><span>IPHONE 11 SERIES</span> </a>
-        </nav>
-    </div>
-
-    <div class="condition">
-        <div class="filter-sort_title">
-            Chọn tiêu chí
-        </div>
-        <div class="filter-sort_list-filter">
-            <div class="filter-wrapper">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-filter" style="margin-right: 5px;"></i>
-                    Bộ lọc
-                </button>
-            </div>
-
-            <div class="filter-price">
-                <button class="btn-filter">
-                    Giá
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
-
-            <div class="filter-memory">
-                <button class="btn-filter">
-                    Bộ nhớ trong
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
-
-            <div class="filter-capacityRam">
-                <button class="btn-filter">
-                    Dung lượng RAM
-                    <i class="fa-solid fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i>
-                </button>
-            </div>
-        </div>
-        <div class="filter-sort_title">
-            Sắp xếp theo
-        </div>
-        <div class="filter-sort_list-filter">
-            <div class="filter-price_than">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-arrow-down-wide-short"style="margin-right: 5px;"></i>
-                    Giá Cao - Thấp
-                </button>
-            </div>
-            
-            <div class="filter-price_than">
-                <button class="btn-filter">
-                    <i class="fa-solid fa-arrow-up-wide-short" style="margin-right: 5px;"></i>
-                    Giá Thấp - Cao  
-                </button>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
