modified:   css/banner.css 	modified:   css/base.css 	modified:   css/contact.css 	modified:   css/footer.css 	modified:   css/header.css 	modified:   css/hot-prod.css 	modified:   css/orderInfo.css 	modified:   home.html 	modified:   index.html 	modified:   orderInfo.html

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
             justify-content: center;
             align-items: center;
             /* background-color: #f8f9fa; */
+            width: 100%;
 
 
         }
@@ -60,12 +61,12 @@
                     </div>
                     <div class="banner-second">
                         <div class="banner2">
-                            <a href="">Giảm ngay 3 triệu khi đặt trước Iphone 16 Series tại SZ
+                            <a href="">Giảm ngay 3 triệu khi <br>đặt trước Iphone 16 Series và  Galaxy ZFold6 tại SZ
                                 <img src="./images/banner/fire.gif" style="width: 200px; height: 8px;" alt="">
                             </a>
                         </div>
                         <div class="banner3">
-                            <a href=""><img src="./images/banner/Acer-Gaming.jpg" alt=""></a>
+                            <a href=""><img src="./images/banner/Laptop-Dell-Gaming-G15-5535-banner.jpg" alt=""></a>
                         </div>
                         <div class="banner4">
                             <a href=""><img src="./images/banner/tuf-gaming-f15.jpg" alt=""></a>
