--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </div>
 
                             <div class="hot-mobile">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -112,7 +112,7 @@
                             </div>
 
                             <div class="hot-mobile">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -154,7 +154,7 @@
                             </div>
 
                             <div class="hot-mobile">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -195,7 +195,7 @@
 
                             </div>
                             <div class="hot-laptop">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -235,7 +235,7 @@
                             </div>
 
                             <div class="hot-mobile">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -277,7 +277,7 @@
                             </div>
 
                             <div class="hot-mobile">
-                                <h4>Điện thoại HOT </h4>
+                                <h4>ĐIỆN THOẠI HOT </h4>
                                 <a href="">Iphone 15 Pro Max</a>
                                 <a href="">Galaxy Z Flip6</a>
                                 <a href="">Galaxy Z Fold6</a>
@@ -368,11 +368,11 @@
                 <div class="ft-content2">
                     <h4>Thông tin liên hệ: </h4>
                     <ul>
-                        <li>Showroom: <b>Tiểu vương quốc Hóc Môn</b></li>
                         <li>Tổng đài hỗ trợ (tư vẫn miễn phí)</li>
-                        <li>Bán hàng (8:30 - 22:00): <b>0386.036.130</b></li>
+                        <li>Chủ cửa hàng - <strong style="color: black;">Thái Thị Mỹ Quyên - 2151150056 </strong> (8:30 - 22:00): <b>0386.036.130</b></li>
+                        <li>Kĩ thuật viên - <strong style="color: black;"> Đặng Hoàng Việt - 2151150056 </strong>(8:30 - 22:00): <b>0972.017.749</b></li>
                         <li>Doanh nghiêp & Đối tác (8:30 - 22:00): <b>0702.641.159</b></li>
-                        <li>Kĩ thuật (8:30 - 22:00): <b>0972.017.749</b></li>
+                        <li>Showroom: <b>Tiểu vương quốc Hóc Môn</b></li>
                     </ul>
 
                 </div>
@@ -414,7 +414,7 @@
 
             </div>
         </footer>
-        </footer>
+
 
 
     </div>
