modified:   css/hot-prod.css 	modified:   css/mobile.css 	modified:   index.php 	modified:   mobile.php 	modified:   orderInfo.html 	modified:   trangchu.php

--- a/orderInfo.html
+++ b/orderInfo.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div class="cart-layout">
-        <div class="cart-info">
-
-            ihihihiih
+    <div class="cart-layout" >
+        <div class="cart-info" id="cart">
+            
+            
         </div>
         <div class="cart-form">
             <h3>THÔNG TIN ĐẶT HÀNG</h3>
